force-app/main/default/objects/Apttus_QPConfig__ProposalUsagePriceTier__c/Apttus_QPConfig__ProposalUsagePriceTier__c.object-meta.xml
<CustomObject>
    <description>Represents a single entry in a quote/proposal usage price tier</description>
    <label>Proposal Usage Price Tier</label>
    <nameField>
        <displayFormat>QT-{0000000000}</displayFormat>
        <label>Tier Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Usage Price Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>