force-app/main/default/objects/Apttus_QPConfig__ProposalUsagePriceTier__c/fields/Apttus_QPConfig__CommitmentQuantity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__CommitmentQuantity__c</fullName>
    <description>The quantity commitment for the period</description>
    <inlineHelpText>The quantity commitment for the period</inlineHelpText>
    <label>Commitment Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>