force-app/main/default/objects/Apttus_QPConfig__ProposalUsagePriceTier__c/fields/Apttus_QPConfig__Dimension2Value__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__Dimension2Value__c</fullName>
    <description>The value for the second dimension</description>
    <label>Dimension 2 Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>