force-app/main/default/objects/Apttus_QPConfig__ProposalUsagePriceTier__c/fields/Apttus_QPConfig__FlatPrice__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__FlatPrice__c</fullName>
    <description>The flat price for the tier or period</description>
    <inlineHelpText>The flat price for the tier or period</inlineHelpText>
    <label>Flat Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>