force-app/main/default/objects/Apttus_QPConfig__ProposalUsagePriceTier__c/fields/Apttus_QPConfig__IsIncluded__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__IsIncluded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the tier is included</description>
    <inlineHelpText>Indicates whether the tier is included</inlineHelpText>
    <label>Is Included</label>
    <type>Checkbox</type>
</CustomField>