force-app/main/default/objects/Apttus_QPConfig__ProposalUsagePriceTier__c/fields/Apttus_QPConfig__PriceMatrixId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__PriceMatrixId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated matrix</description>
    <inlineHelpText>ID of the associated matrix</inlineHelpText>
    <label>Price Matrix</label>
    <referenceTo>Apttus_Config2__PriceMatrix__c</referenceTo>
    <relationshipLabel>Proposal Usage Price Tiers</relationshipLabel>
    <relationshipName>ProposalUsagePriceTiers</relationshipName>
    <type>Lookup</type>
</CustomField>