force-app/main/default/objects/Apttus_QPConfig__ProposalUsagePriceTier__c/fields/Apttus_QPConfig__TierStartValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPConfig__TierStartValue__c</fullName>
    <description>The tier start value</description>
    <inlineHelpText>The tier start value</inlineHelpText>
    <label>Tier Start Value</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>